----------------------------------------------------------------------------
Centric CRM 4.2 Alpha
Copyright (C) 2007 Dark Horse Ventures, LLC
Change Log
February 6, 2007
----------------------------------------------------------------------------

- Website public file attachments from a document store
- Quickly complete an action plan


----------------------------------------------------------------------------
Centric CRM 4.1.1 alpha
Copyright (C) 2007 Dark Horse Ventures, LLC
Change Log
March 9, 2007
----------------------------------------------------------------------------

Latest information can be found in the Centric CRM 4.1 Community:
http://www.centriccrm.com/ProjectManagement.do?command=ProjectCenter&pid=109

Fixes:
- Removed a "." from the LDAP utils to work with active directory, may cause
  an issue with LDAP and needs to be verified
- Javascript sending unescaped text in some popup widgets


----------------------------------------------------------------------------
Centric CRM 4.1
Copyright (C) 2007 Dark Horse Ventures, LLC
Change Log
February 7, 2007
----------------------------------------------------------------------------

Latest information can be found in the Centric CRM 4.1 Community:
http://www.centriccrm.com/ProjectManagement.do?command=ProjectCenter&pid=109

New features:
- Added Documents to Contacts module
- Added Documents to Account Contacts module
- Added file attachments to Communications messages
- Added creating reports as HTML, CSV, Excel, in addition to PDF
- Option to automatically email the report once it has been generated
- Accounts can now be imported without a contact
- Additional Account search form fields
- Added new fields to lead/contact/account: revenue, lat/longitude, business
  name 2, year started, SIC, DUNS Type, DUNS Number
- Accounts can now have activities (without specifying a contact)
- Activities have been split into "Log an Activity" for previously completed