@@ -28,7 +28,7 @@
       <c:set var="site" value="${site}"/>
       <jsp:useBean id="site" type="org.aspcfs.modules.website.base.Site" />
       <dhv:fileItemImage id="<%= site.getLogoImageId() %>" path="website" name="Logo"/>
-			<dhv:evaluate if="<%= isPopup(request) %>">
+			<dhv:evaluate if="<%= !"true".equals(portal) %>">
 		  	[<a href="Sites.do?command=UpdateLogo&logoImageId=-1&popup=true&siteId=<%=site.getId()%>">Remove</a>]
 			</dhv:evaluate>
 		</td>
